# tillyoumakeit

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-hexagonal-skeleton.md  1-2-engine-adapter-and-mssql-connectivity.md  1-3-postgres-mysql-starrocks-adapters.md  1-4-schema-introspection.md  1-5-streaming-sampling.md  1-6-per-column-profiler.md  1-7-correlation-detection.md  1-8-persistent-profile.md  2-1-marginal-distribution-synthesis.md  2-2-correlation-preservation.md  2-3-referential-integrity-realistic-values.md  2-4-conditional-seeded-generation.md  2-5-leakage-gate-sensitive-columns.md  2-6-multi-destination-export.md  2-7-fidelity-report.md  3-1-pluggable-mutator-engine.md  3-2-out-of-distribution-mutators.md  3-3-format-type-violation-mutators.md  3-4-schema-constraint-breakage-mutators.md  3-5-configurable-chaos-policy.md  3-6-fault-manifest-audit.md  4-1-pii-auto-classification.md  4-2-privacy-filters.md  4-3-quality-privacy-report.md  5-1-streamlit-shell-connection.md  5-2-profile-schema-explorer.md  5-3-generation-config-preview.md  5-4-chaos-config-preview.md  5-5-reports-view-export.md  pde1-1-1-gated-dataset.md  pde1-1-2-spec-model.md  pde1-1-3-whole-db-generation.md  pde1-2-1-rng-substreams.md  pde1-2-2-shared-keys.md  pde1-2-3-consistency-unit.md  pde1-3-1-fixtures-scan-reject.md  pde1-3-2-guardrail.md  pde1-3-3-provision-cli.md
_bmad-output/planning-artifacts/: epics-content-chaos.md  epics-contracts-streaming.md  epics-pde-phase2.md  epics-pde-phase3.md  epics-pde1-phase1.md  epics.md
_bmad-output/planning-artifacts/architecture/architecture-tymi-2026-07-01/: .memlog.md  ARCHITECTURE-SPINE.md  solution-design.md
_bmad-output/planning-artifacts/architecture/architecture-tymi-content-chaos-2026-07-05/: .memlog.md  ARCHITECTURE-SPINE.md
_bmad-output/planning-artifacts/architecture/architecture-tymi-contracts-streaming-2026-07-05/: .memlog.md  ARCHITECTURE-SPINE.md
_bmad-output/planning-artifacts/architecture/architecture-tymi-pde-phase2-2026-07-05/: ARCHITECTURE-SPINE.md
_bmad-output/specs/spec-tymi-pde1-phase1/: .memlog.md  SPEC.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: README.md  development.md  how-it-works.md  overview.html  provisioning.md  status.md
src/tymi/: __init__.py
src/tymi/chaos/: __init__.py  engine.py  policy.py
src/tymi/cli/: __init__.py  app.py
src/tymi/config/: __init__.py  consistency.py  loader.py  models.py  spec.py
src/tymi/core/: __init__.py  errors.py  pipeline.py  plugins.py  rng.py
src/tymi/domain/: __init__.py  artifacts.py
src/tymi/engines/: __init__.py  _base.py  _introspect.py  mssql.py  mysql.py  postgres.py  starrocks.py
src/tymi/eval/: __init__.py  chaos_audit.py  evaluate.py  fidelity.py  privacy_report.py
src/tymi/io/: __init__.py  exporters.py  schema_map.py
src/tymi/ports/: __init__.py
src/tymi/privacy/: __init__.py  classifier.py  filters.py
src/tymi/profiling/: __init__.py  correlations.py  profile_io.py  profiler.py
src/tymi/provision/: __init__.py  guardrail.py  pipeline.py
src/tymi/synth/: __init__.py  conditions.py  copula.py  cross_correlation.py  delta.py  faker_values.py  fixtures.py  generator.py  keys.py  leakage.py  marginals.py  relational.py  streaming.py  subset.py  substreams.py  whole_db.py
src/tymi/ui/: __init__.py  app.py  launch.py  services.py
tests/integration/: test_correlation_integration.py  test_export_integration.py  test_generate_correlation_integration.py  test_generate_integration.py  test_introspect_integration.py  test_mssql_connectivity.py  test_pg_mysql_connectivity.py  test_profile_integration.py  test_profile_persistence_integration.py  test_relational_integration.py  test_sample_integration.py  test_starrocks_connectivity.py
tests/unit/: test_chaos_audit.py  test_chaos_engine.py  test_chaos_policy.py  test_cli_provision.py  test_cli_smoke.py  test_cli_test_connection.py  test_conditions.py  test_config.py  test_consistency.py  test_copula.py  test_correlations.py  test_cross_correlation.py  test_delta.py  test_engine_registration.py  test_engine_urls.py  test_export.py  test_faker_values.py  test_fidelity.py  test_fixtures.py  test_format_type_mutators.py  test_gated_dataset.py  test_generate_conditional.py  test_generator.py  test_guardrail.py  test_import_contracts.py  test_introspect.py  test_keys.py  test_leakage.py  test_marginals.py  test_mssql_url.py  test_outlier_mutator.py  test_pii_classifier.py  test_plugins.py  test_privacy_filters.py  test_privacy_report.py  test_profile_io.py  test_profiler.py  test_provision.py  test_relational.py  test_rng.py  (+13 more)
(+28 files in other folders)
