[project]
name = "tymi"
version = "0.0.1"
description = "Fake It Till You Make It — faithful synthetic data generator + data chaos monkey"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aikirias" }]
dependencies = [
    "typer>=0.24",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.scripts]
tymi = "tymi.cli.app:app"

# Plugin discovery groups (AD-3). Empty for now; engines/mutators register here later.
[project.entry-points."tymi.engines"]

[project.entry-points."tymi.mutators"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tymi"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Only lint our own code; the BMAD framework and planning artifacts are vendored.
extend-exclude = ["_bmad", "_bmad-output", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# AD-1: dependencies point inward only. Layering is core -> ports -> domain;
# neither the core nor the ports may import a concrete adapter package.
[tool.importlinter]
root_packages = ["tymi"]

[[tool.importlinter.contracts]]
name = "inward layering: core -> ports -> domain"
type = "layers"
layers = ["tymi.core", "tymi.ports", "tymi.domain"]

[[tool.importlinter.contracts]]
name = "core and ports never import adapters"
type = "forbidden"
source_modules = ["tymi.core", "tymi.ports", "tymi.domain"]
forbidden_modules = [
    "tymi.engines",
    "tymi.synth",
    "tymi.chaos",
    "tymi.privacy",
    "tymi.eval",
    "tymi.io",
    "tymi.cli",
    "tymi.ui",
]
