[project]
name = "tymi"
version = "0.0.1"
description = "Fake It Till You Make It — faithful synthetic data generator + data chaos monkey"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aikirias" }]
dependencies = [
    "typer>=0.24",
    "pydantic>=2.11",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "sqlalchemy>=2.0.51",
    "faker>=30",
    "pyodbc>=5.3",
    "psycopg[binary]>=3.3",
    "pymysql>=1.2",
    "pyarrow>=24.0.0",
]

[project.scripts]
tymi = "tymi.cli.app:app"

# Plugin discovery groups (AD-3). Engines/mutators register here.
[project.entry-points."tymi.engines"]
mssql = "tymi.engines.mssql:MssqlAdapter"
postgres = "tymi.engines.postgres:PostgresAdapter"
mysql = "tymi.engines.mysql:MySqlAdapter"
starrocks = "tymi.engines.starrocks:StarRocksAdapter"

[project.entry-points."tymi.mutators"]
outlier = "tymi.chaos.mutators.outlier:OutlierMutator"
text_in_numeric = "tymi.chaos.mutators.format_type:TextInNumericMutator"
invalid_date = "tymi.chaos.mutators.format_type:InvalidDateMutator"
broken_encoding = "tymi.chaos.mutators.format_type:BrokenEncodingMutator"
oversized_string = "tymi.chaos.mutators.format_type:OversizedStringMutator"
illegal_null = "tymi.chaos.mutators.format_type:IllegalNullMutator"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "import-linter>=2.0",
    "testcontainers[mssql,postgres,mysql]>=4.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tymi"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Only lint our own code; the BMAD framework and planning artifacts are vendored.
extend-exclude = ["_bmad", "_bmad-output", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer intentionally uses function calls (typer.Option/Argument) as defaults.
"src/tymi/cli/*" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Integration tests need Docker + the ODBC driver; excluded from the default run.
addopts = "-m 'not integration'"
markers = [
    "integration: tests requiring Docker/testcontainers and the MSSQL ODBC driver",
]

# AD-1: dependencies point inward only. Layering is core -> ports -> domain;
# neither the core nor the ports may import a concrete adapter package.
[tool.importlinter]
root_packages = ["tymi"]

[[tool.importlinter.contracts]]
name = "inward layering: core -> ports -> domain"
type = "layers"
layers = ["tymi.core", "tymi.ports", "tymi.domain"]

[[tool.importlinter.contracts]]
name = "core and ports never import adapters"
type = "forbidden"
source_modules = ["tymi.core", "tymi.ports", "tymi.domain"]
forbidden_modules = [
    "tymi.engines",
    "tymi.synth",
    "tymi.chaos",
    "tymi.privacy",
    "tymi.eval",
    "tymi.io",
    "tymi.cli",
    "tymi.ui",
]
